--- a/app_flask/templates/main.html
+++ b/app_flask/templates/main.html
@@ -9,7 +9,7 @@
 <br>для композиционных материалов</h1>
     <form action="" method="post">
     <fieldset>
-    <strong><u> <legend style="color:#0047ab; font-family: tahoma; font-size: 7">Введите параметры</legend> </u></strong>
+    <strong><u> <legend style="color:#000000; font-family: tahoma; font-size: 7">Введите параметры</legend> </u></strong>
     <p>
         <input type="text" name="Плотность, кг/м3" required>
 		<label for="Плотность, кг/м3" style="color:#000000; font-family: tahoma; font-size: 6">Плотность, кг/м3</label>
